caching with redis and auth

--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -2,7 +2,7 @@ $blackColor: #333;
 $whiteColor: #fff;
 $greyColor: #e8e8e8;
 $primaryColor: #24292e;
-$secondaryColor: #d9ab4d;
+$secondaryColor: #8d8d8d;
 $successColor: #87bf0a;
 $errorColor: #e82c0c;
 $freeSpace: 15px;
