--- a/dev/scss/_footer.scss
+++ b/dev/scss/_footer.scss
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   height: $footerHeight;
-  border-top: 1px solid $greyColor;
-  background-color: $whiteColor;
+  //border-top: 1px solid $greyColor;
+  background-color: $secondaryColor;
 
   .container {
     height: 100%;
