--- a/views/layout/sidebar.ejs
+++ b/views/layout/sidebar.ejs
@@ -41,6 +41,7 @@
     </form>
     <% } else { %>
     <p>Привет, <%= user.login %>! <a href="/api/auth/logout">Выход</a></p>
+    <p><a href="/post/add">Добавить пост</a></p>
     <% } %>
   </div>
   <div class="box">
