--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -14,6 +14,7 @@ $borderRadius: 5px;
 @import 'grid';
 @import 'typography';
 @import 'forms';
+@import 'links';
 @import '../../node_modules/medium-editor/src/sass/medium-editor';
 @import '../../node_modules/medium-editor/src/sass/themes/default';
 
