--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,9 @@
       <div class="post">
         <div class="top">
           <h2>
-            <%=posts.posts[i].title %>
+            <a href="/posts/<%=posts.posts[i].url %>">
+              <%=posts.posts[i].title %>
+            </a>
           </h2>
         </div>
         <div class="body">
