--- a/views/post/add.ejs
+++ b/views/post/add.ejs
@@ -20,6 +20,10 @@
           <button class="publish-button">Опубликовать</button>
         </div>
       </form>
+      <form method="POST" enctype="multipart/form-data" id="fileinfo">
+        <input type="file" name="file" id="file" required />
+        <button class="upload-button">Загрузить</button>
+      </form>
     </div>
 
     <%- include('../layout/sidebar.ejs') %>
