--- a/views/archive/index.ejs
+++ b/views/archive/index.ejs
@@ -10,6 +10,13 @@
             <a href="/posts/<%=posts.posts[i].url %>">
               <%=posts.posts[i].title %>
             </a>
+            <% if (posts.posts[i].owner.login === user.login) { %>
+            <a
+              style="color: black; text-decoration: none;"
+              href="/post/edit/<%=posts.posts[i].id %>"
+              >✎</a
+            >
+            <% } %>
           </h2>
         </div>
         <div class="body">
